# deepcoder

./: Cargo.toml  RUN_ME.bat  build-gnu.bat  build-msvc.bat  build-release.bat  build.bat  check-env.bat
.github/workflows/: build.yml
deepcoder-app-server/: Cargo.toml
deepcoder-app-server/src/: lib.rs  protocol.rs
deepcoder-cli/: Cargo.toml
deepcoder-cli/src/: main.rs
deepcoder-config/: Cargo.toml
deepcoder-config/src/: lib.rs
deepcoder-engine/: Cargo.toml
deepcoder-engine/src/: lib.rs  session.rs  turn.rs
deepcoder-error/: Cargo.toml
deepcoder-error/src/: lib.rs
deepcoder-extension/: Cargo.toml
deepcoder-extension/src/: lib.rs
deepcoder-mcp/: Cargo.toml
deepcoder-mcp/src/: lib.rs
deepcoder-persistence/: Cargo.toml
deepcoder-persistence/src/: index.rs  jsonl.rs  lib.rs
deepcoder-provider/: Cargo.toml
deepcoder-provider/src/: deepseek.rs  lib.rs
deepcoder-sandbox/: Cargo.toml
deepcoder-sandbox/src/: hardening.rs  lib.rs  policy.rs
deepcoder-skills/: Cargo.toml
deepcoder-skills/src/: lib.rs
deepcoder-tools/: Cargo.toml
deepcoder-tools/src/: lib.rs  router.rs  traits.rs
deepcoder-tui/: Cargo.toml
deepcoder-tui/src/: app.rs  lib.rs  render.rs  widgets.rs
deepcoder-types/: Cargo.toml
deepcoder-types/src/: config.rs  event.rs  lib.rs  message.rs  provider.rs  session.rs  tool.rs
