[package]
name = "deepcoder-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
regex.workspace = true
glob.workspace = true
async-trait.workspace = true
deepcoder-types = { workspace = true }
deepcoder-error = { workspace = true }
deepcoder-config = { workspace = true }
